--- a/src/app/components/shared/custom-modal/custom-modal.component.css
+++ b/src/app/components/shared/custom-modal/custom-modal.component.css
@@ -21,8 +21,9 @@
   left: 0;
   right: 0;
   width: 100%;
-  height: 100vh;
-  z-index: 1000;
+  /* min-height: 100vh; */
+  min-height: 100%;
+  z-index: 10000;
   background-color: rgba(0, 0, 0, 0.379);
   display: flex;
   justify-content: center;
