--- a/src/app/pages/ver-rol/ver-rol.component.html
+++ b/src/app/pages/ver-rol/ver-rol.component.html
@@ -69,6 +69,9 @@
 
                     }
 
+                    <i class="fa-solid fa-book  fa-lg btn" routerLink="/permisos/{{rol.id}}"></i>
+
+
                 </div>
 
             </td>
