adding visual asignation rol

--- a/src/app/components/shared/switch-box/switch-box.component.html
+++ b/src/app/components/shared/switch-box/switch-box.component.html
@@ -1,4 +1,4 @@
 <label class="switch" (click)="switchBox($event)">
-    <input type="checkbox">
+    <input type="checkbox" [defaultChecked]="defaultValue()">
     <span class="slider"></span>
 </label>
