--- a/src/app/pages/permissions/permissions.component.html
+++ b/src/app/pages/permissions/permissions.component.html
@@ -1,18 +1,20 @@
+<app-exito [msg]="alertaService.msg()" *ngIf="alertaService.msg().length > 0" />
+
 <div class="grid">
-    <div class="grid-headers">
-        <h5>Nombre del modulo</h5>
-        <h5>Editar</h5>
-        <h5>Eliminar</h5>
-        <h5>Escribir</h5>
+        <div class="grid-headers">
+                <h5>Nombre del modulo</h5>
+                <h5>Editar</h5>
+                <h5>Eliminar</h5>
+                <h5>Escribir</h5>
 
-    </div>
+        </div>
 
-    <div class="grid-body">
-        @for (module of this.modulosService.modulos(); track $index) {
-        @if(module?.Submodulos && module.Submodulos!.length >0) {
-        <div class="grid-subbody-expanded " id="expanded-row-{{module.id}}" (click)="expandRows(module.id)">
-            <h5>{{module.name}}</h5>
-            <!-- <h5><app-switch-box tipoPermiso="edit" [modulo]="module"
+        <div class="grid-body">
+                @for (module of this.modulosService.modulos(); track $index) {
+                @if(module?.Submodulos && module.Submodulos!.length >0) {
+                <div class="grid-subbody-expanded " id="expanded-row-{{module.id}}" (click)="expandRows(module.id)">
+                        <h5>{{module.name}}</h5>
+                        <!-- <h5><app-switch-box tipoPermiso="edit" [modulo]="module"
                     (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
             <h5><app-switch-box tipoPermiso="delete" [modulo]="module"
                     (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
@@ -20,57 +22,60 @@
                     (permisosModulo)="handlePermissionsOnChange($event)" /> </h5> -->
 
 
-            <div class="grid-accordeon-header " id="accordeon-{{module.id}}">
-                <h5>Nombre del Submodulo</h5>
-                <h5>Editar</h5>
-                <h5>Eliminar</h5>
-                <h5>Escribir</h5>
-            </div>
+                        <div class="grid-accordeon-header " id="accordeon-{{module.id}}">
+                                <h5>Nombre del Submodulo</h5>
+                                <h5>Editar</h5>
+                                <h5>Eliminar</h5>
+                                <h5>Escribir</h5>
+                        </div>
 
-            <div class="grid-accordeon-body  {{`accordeon-body-${module.id}`}} "
-                *ngFor="let submodule of module.Submodulos;" id="accordeon-body-{{module.id}}">
-                <!-- <pre>
+                        <div class="grid-accordeon-body  {{`accordeon-body-${module.id}`}} "
+                                *ngFor="let submodule of module.Submodulos;" id="accordeon-body-{{module.id}}">
+                                <!-- <pre>
                 {{module.Submodulos |json }}
             </pre> -->
 
-                <h5>{{submodule.name}}</h5>
-                <h5><app-switch-box [modulo]="module" [submodulo]="submodule.id" tipoPermiso="edit"
-                        (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
-                <h5><app-switch-box [modulo]="module" [submodulo]="submodule.id" tipoPermiso="delete"
-                        (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
-                <h5><app-switch-box [modulo]="module" [submodulo]="submodule.id" tipoPermiso="write"
-                        (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
-            </div>
+                                <h5>{{submodule.name}}</h5>
+                                <h5><app-switch-box [modulo]="module" [submodulo]="submodule.id" tipoPermiso="edit"
+                                                (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
+                                <h5><app-switch-box [modulo]="module" [submodulo]="submodule.id" tipoPermiso="delete"
+                                                (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
+                                <h5><app-switch-box [modulo]="module" [submodulo]="submodule.id" tipoPermiso="write"
+                                                (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
+                        </div>
+
+                </div>
+                } @else {
+
+                <div class="grid-subbody">
+                        <h5>{{module.name}}</h5>
+                        <h5><app-switch-box tipoPermiso="edit" [modulo]="module"
+                                        [defaultValue]="moduleIsAlreadyAssigned(module,'edit')"
+                                        (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
+                        <h5><app-switch-box tipoPermiso="delete" [modulo]="module"
+                                        [defaultValue]="moduleIsAlreadyAssigned(module,'delete')"
+                                        (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
+                        <h5><app-switch-box tipoPermiso="write" [modulo]="module"
+                                        [defaultValue]="moduleIsAlreadyAssigned(module,'write')"
+                                        (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
+
+
+
+
+
+                </div>
+
+                }
+
+
+
+                }
 
         </div>
-        } @else {
-
-        <div class="grid-subbody">
-            <h5>{{module.name}}</h5>
-            <h5><app-switch-box tipoPermiso="edit" [modulo]="module"
-                    (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
-            <h5><app-switch-box tipoPermiso="delete" [modulo]="module"
-                    (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
-            <h5><app-switch-box tipoPermiso="write" [modulo]="module"
-                    (permisosModulo)="handlePermissionsOnChange($event)" /> </h5>
-
-
-
-
-
-        </div>
-
-        }
-
-
-
-        }
-
-    </div>
 </div>
 
 <div class="flex" *ngIf="permissionAsignation().length >0">
-    <button class="btn" (click)="asignarPermisos()">
-        <i class="fa-solid fa-save fa-xl mr"></i>
-        Agregar permisos</button>
+        <button class="btn" (click)="asignarPermisos()">
+                <i class="fa-solid fa-save fa-xl mr"></i>
+                Agregar permisos</button>
 </div>
