--- a/src/app/components/shared/panel-admin/panel-admin.component.html
+++ b/src/app/components/shared/panel-admin/panel-admin.component.html
@@ -57,7 +57,7 @@
 
 
 
-        <div class="nav_item">
+        <div class="nav_item" (click)="logout()">
             <i class="fa-solid fa-right-from-bracket"></i>
             <a [ngClass]="{'text-appear':toggleOpenMenu() == true, 'hidding-text':toggleOpenMenu() == false }">Cerrar
                 Sesión</a>
