working on responsive

--- a/src/app/components/shared/btn/btn.component.css
+++ b/src/app/components/shared/btn/btn.component.css
@@ -6,7 +6,7 @@
 
 .btn10 {
   padding: 9px 80px;
-  margin: 10px 4px;
+  /* margin: 10px 4px; */
   color: #fff;
   text-decoration: none;
   display: inline-block;
