--- a/src/app/components/shared/btn/btn.component.html
+++ b/src/app/components/shared/btn/btn.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div [ngClass]="{'wrapper':center()}">
     <button class="btn10">
         <span>{{text()}}</span>
         <div class="transition"></div>
