--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -21,7 +21,7 @@
 
 
 <img class="wave" src="assets/img/wave2.png">
-<div class="form-img">
+<!-- <div class="form-img">
     <div class="content-form">
         <img src="assets/img/logo.svg">
         <h1>¡Bienvenido!</h1>
@@ -34,7 +34,7 @@
             <app-text type="password" error="El campo es obligatorio" fieldName="password" [form]="form"
                 label="Password" (removeAlerts)="this.removerAlertas()" />
 
-            <app-btn text="Ingresar" />
+            <app-btn text="Ingresar" [center]="false" />
             <p>
                 <a routerLink="/forget-password" style="cursor: pointer;">¿Olvidaste tu contraseña?</a>
             </p>
@@ -45,5 +45,31 @@
         <img src="assets/img/undraw_mobile_interface_wakp.svg" alt="User">
     </div>
 
+
+</div> -->
+
+<div class="form">
+    <div class="content-form">
+        <img src="assets/img/logo.svg" class="img-logo">
+        <h1>¡Bienvenido!</h1>
+        <form [formGroup]="form" (ngSubmit)="login()">
+
+            <app-text type="email" error="Debe de ser un correo valido" fieldName="email" [form]="form" label="Email"
+                (removeAlerts)="this.removerAlertas()" />
+
+
+            <app-text type="password" error="El campo es obligatorio" fieldName="password" [form]="form"
+                label="Password" (removeAlerts)="this.removerAlertas()" />
+
+            <app-btn text="Ingresar" [center]="false" />
+            <p>
+                <a routerLink="/forget-password" style="cursor: pointer;">¿Olvidaste tu contraseña?</a>
+            </p>
+
+        </form>
+    </div>
+
+
+    <img src="assets/img/undraw_mobile_interface_wakp.svg" class="login-imagen" alt="User">
 
 </div>
