--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -9,49 +9,38 @@ body {
   line-height: 0.6;
   font-family: "Rosario", sans-serif;
   padding: 0 1.5em;
-  /* overflow: hidden; */
-  /* height: calc(100vh - 800rem); */
-  /* width: calc(100vw - 800rem); */
+  position: relative;
 }
-
-/* Aquino ============================================================================================*/
-/* contenido */
-.form-img {
-  width: 100px;
-  height: 110px;
-}
-/* Imagen de login ==========================*/
-.login-imagen {
+.wave {
   position: absolute;
-  top: 200px;
-  left: 900px;
-}
-.login-imagen img {
-  width: 100%;
   height: 100%;
+  z-index: -2;
+  width: 90%;
+  top: 0;
+  right: 0;
+  bottom: 0;
 }
 
-@media screen and (max-width: 1250px) {
-  .login-imagen {
-    opacity: 0;
-  }
+.form {
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: space-between;
+  margin-top: 30px;
+  min-height: calc(100vh - 30px);
 }
-/* Contenido de form */
-.content-form {
-  margin-top: 70px;
-  margin-left: 190px;
-  width: 300px;
-}
-/* Logo ==========================*/
 
-.content-form img {
+.img-logo {
+  margin: 0 auto;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
 }
-/* bienvenido ===================================*/
+
+.login-imagen {
+  width: 50%;
+}
 .content-form h1 {
   text-align: center;
   /* padding-top: 10px; */
@@ -75,50 +64,8 @@ body {
     border-color: transparent;
   }
 }
-/* form ==================================================== */
-form {
-  height: 150px;
-  width: 300px;
-}
 
-.wave {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  height: 100vh;
-  z-index: -1;
-  overflow: hidden;
-}
-.container {
-  max-width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1.5em;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-.login {
-  text-align: center;
-  font-size: 3em;
-  padding: 20px;
-}
-
-.login span {
-  color: #766ffc;
-}
-
-.contact-wrapper > * {
-  padding: 1em;
-}
-
-.contenedor-validacion {
-  margin-top: 5px;
-}
-
+/* spiner personalizado */
 .fondo {
   position: fixed;
   background: rgba(0, 0, 0, 0.322);
@@ -129,13 +76,13 @@ ul {
   z-index: 100000000;
   overflow: hidden;
 }
+
 .spinner-container {
   position: absolute;
   top: 50%;
   left: 50%;
 }
 
-/* spiner personalizado */
 .lds-spinner {
   color: official;
   display: inline-block;
@@ -215,7 +162,7 @@ ul {
   }
 }
 /*---------responsivee---------*/
-
+/* 
 @media screen and (max-width: 700px) {
   .content-form {
     margin-top: 50%;
@@ -235,5 +182,18 @@ ul {
 @media screen and (max-width: 700px) {
   imput {
     width: 280px;
+  }
+} */
+
+@media (max-width: 700px) {
+  .login-imagen {
+    display: none;
+  }
+
+  .content-form {
+    margin: 0 auto;
+  }
+  .wave {
+    display: none;
   }
 }
