--- a/src/app/components/shared/panel-admin/panel-admin.component.css
+++ b/src/app/components/shared/panel-admin/panel-admin.component.css
@@ -1,6 +1,7 @@
 .flex {
   display: flex;
   /* background: var(--sub-color); */
+  /* min-height: 100vh; */
   min-height: 100vh;
 }
 
@@ -34,6 +35,7 @@
 .header {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   padding: 10px;
   justify-content: space-between;
 }
@@ -146,4 +148,13 @@
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
+}
+
+@media screen and (max-width: 700px) {
+  .header {
+    justify-content: center;
+  }
+  .content {
+    padding: 15px;
+  }
 }
