--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  position: relative;
+  /* position: relative; */
   margin: 0;
   /* padding: 0rem 0 0 5.75rem; */
   font-family: var(--body-font);
